# FastAPI-Cookiecutter

./: .buildinfo  .gitignore  01_about.html  02_prompts.html  03_usage.html  04_development.html  06_core_team.html  07_contributing.html  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  cookiecutter.json  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: release.yml  sphinx.yml  test.yml
_sources/: 02_prompts.rst.txt  03_usage.rst.txt  04_development.rst.txt
docs/source/: 01_about.rst  06_core_team.rst  conf.py  index.rst
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: base.txt  dev.txt  doc.txt
tests/: README.md  conftest.py  test_initialization.py  test_linting.py  test_pytest.py  test_running.sh
tests/helpers/: utils.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.rst  Makefile  README.rst  bitbucket-pipelines.yml  docker-compose.sh  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  sphinx.yml  test.yml
{{cookiecutter.project_slug}}/LICENSES/: 2-Clause BSD  3-Clause BSD  APACHE  GPL  MIT
{{cookiecutter.project_slug}}/docker/: Dockerfile  Dockerfile.local  docker-compose.yml  init.sql
{{cookiecutter.project_slug}}/docs/source/: 02_usage.rst  03_source.rst  (+3 more)
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt
{{cookiecutter.project_slug}}/tests/: conftest.py  test_application.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  main.py
(+43 files in other folders)
